@@ -1,11 +1,13 @@
 requires 'perl',                     '5.010001';
 requires 'Cache::Cache',             '1.06';
+requires 'CSS::LESSp',               '0.86';
 requires 'CSS::Minifier::XS',        '0.08';
 requires 'Digest::SHA1',             '2.13';
 requires 'File::Slurp',              '9999.19';
 requires 'HTTP::Date',               '6.02';
 requires 'JavaScript::Minifier::XS', '0.09';
 requires 'Plack';
+requires 'Text::Sass',               '0.97';
 
 on 'test' => sub {
     requires 'Test::More',           '0.98';
