@@ -1,0 +1,7 @@
+$blue: #3bbfce;
+
+.foo {
+  border-color: $blue;
+  color:
+    darken($blue, 9%);
+}
